api wiring and started with first api implementation
